fixed save text being hard to read in darkmode

--- a/code/modules/client/darkmode.css
+++ b/code/modules/client/darkmode.css
@@ -98,8 +98,8 @@ h1.alert, h2.alert		{color: #a4bad6;}
 
 /*Persistence*/
 .autosave				{color: #00ff00; font-weight: bold; font-size: 125%;}
-.autosave_warn			{color: #5f2525; font-weight: bold; font-size: 125%;}
-.serializer				{color: #791979; font-weight: bold;}
+.autosave_warn			{color: #a13434; font-weight: bold; font-size: 125%;}
+.serializer				{color: #a523a5; font-weight: bold;}
 
 /* General purpose colour classes */
 .font_red               {color: #ff0000;}
